// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bracket options: () only 1`] = `
[
  {
    "content": "aaa",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 3,
      "start": 0,
    },
  },
  {
    "close": ")",
    "content": "(bbb{})",
    "innerContent": "bbb{}",
    "nodeType": "bracket",
    "nodes": [
      {
        "content": "bbb{}",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 9,
          "start": 4,
        },
      },
    ],
    "open": "(",
    "pos": {
      "depth": 0,
      "end": 9,
      "start": 3,
    },
  },
  {
    "content": "ccc[ddd]",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 18,
      "start": 10,
    },
  },
]
`;

exports[`bracket options: rare option 1`] = `
[
  {
    "content": "t",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 1,
      "start": 0,
    },
  },
  {
    "close": "o",
    "content": "OshinO kyoko",
    "innerContent": "shinO kyok",
    "nodeType": "bracket",
    "nodes": [
      {
        "content": "shin",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 6,
          "start": 2,
        },
      },
      {
        "close": "o",
        "content": "O kyo",
        "innerContent": " ky",
        "nodeType": "bracket",
        "nodes": [
          {
            "content": " ky",
            "nodeType": "text",
            "pos": {
              "depth": 2,
              "end": 10,
              "start": 7,
            },
          },
        ],
        "open": "O",
        "pos": {
          "depth": 1,
          "end": 10,
          "start": 6,
        },
      },
      {
        "content": "k",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 12,
          "start": 11,
        },
      },
    ],
    "open": "O",
    "pos": {
      "depth": 0,
      "end": 12,
      "start": 1,
    },
  },
]
`;

exports[`complex: any bracket 1`] = `
[
  {
    "close": "]",
    "content": "[({})]",
    "innerContent": "({})",
    "nodeType": "bracket",
    "nodes": [
      {
        "close": ")",
        "content": "({})",
        "innerContent": "{}",
        "nodeType": "bracket",
        "nodes": [
          {
            "close": "}",
            "content": "{}",
            "innerContent": "",
            "nodeType": "bracket",
            "nodes": [],
            "open": "{",
            "pos": {
              "depth": 2,
              "end": 3,
              "start": 2,
            },
          },
        ],
        "open": "(",
        "pos": {
          "depth": 1,
          "end": 4,
          "start": 1,
        },
      },
    ],
    "open": "[",
    "pos": {
      "depth": 0,
      "end": 5,
      "start": 0,
    },
  },
]
`;

exports[`complex: empty 1`] = `[]`;

exports[`complex: gata gata 1`] = `
[
  {
    "content": "aa",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 2,
      "start": 0,
    },
  },
  {
    "close": ")",
    "content": "({cc}bb{c2(dd)c2}b)",
    "innerContent": "{cc}bb{c2(dd)c2}b",
    "nodeType": "bracket",
    "nodes": [
      {
        "close": "}",
        "content": "{cc}",
        "innerContent": "cc",
        "nodeType": "bracket",
        "nodes": [
          {
            "content": "cc",
            "nodeType": "text",
            "pos": {
              "depth": 2,
              "end": 6,
              "start": 4,
            },
          },
        ],
        "open": "{",
        "pos": {
          "depth": 1,
          "end": 6,
          "start": 3,
        },
      },
      {
        "content": "bb",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 9,
          "start": 7,
        },
      },
      {
        "close": "}",
        "content": "{c2(dd)c2}",
        "innerContent": "c2(dd)c2",
        "nodeType": "bracket",
        "nodes": [
          {
            "content": "c2",
            "nodeType": "text",
            "pos": {
              "depth": 2,
              "end": 12,
              "start": 10,
            },
          },
          {
            "close": ")",
            "content": "(dd)",
            "innerContent": "dd",
            "nodeType": "bracket",
            "nodes": [
              {
                "content": "dd",
                "nodeType": "text",
                "pos": {
                  "depth": 3,
                  "end": 15,
                  "start": 13,
                },
              },
            ],
            "open": "(",
            "pos": {
              "depth": 2,
              "end": 15,
              "start": 12,
            },
          },
          {
            "content": "c2",
            "nodeType": "text",
            "pos": {
              "depth": 2,
              "end": 18,
              "start": 16,
            },
          },
        ],
        "open": "{",
        "pos": {
          "depth": 1,
          "end": 18,
          "start": 9,
        },
      },
      {
        "content": "b",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 20,
          "start": 19,
        },
      },
    ],
    "open": "(",
    "pos": {
      "depth": 0,
      "end": 20,
      "start": 2,
    },
  },
  {
    "content": "aa",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 23,
      "start": 21,
    },
  },
  {
    "close": ")",
    "content": "(b2)",
    "innerContent": "b2",
    "nodeType": "bracket",
    "nodes": [
      {
        "content": "b2",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 26,
          "start": 24,
        },
      },
    ],
    "open": "(",
    "pos": {
      "depth": 0,
      "end": 26,
      "start": 23,
    },
  },
  {
    "content": "aa",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 29,
      "start": 27,
    },
  },
]
`;

exports[`complex: nest side 1`] = `
[
  {
    "close": ")",
    "content": "({}fuga{})",
    "innerContent": "{}fuga{}",
    "nodeType": "bracket",
    "nodes": [
      {
        "close": "}",
        "content": "{}",
        "innerContent": "",
        "nodeType": "bracket",
        "nodes": [],
        "open": "{",
        "pos": {
          "depth": 1,
          "end": 2,
          "start": 1,
        },
      },
      {
        "content": "fuga",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 7,
          "start": 3,
        },
      },
      {
        "close": "}",
        "content": "{}",
        "innerContent": "",
        "nodeType": "bracket",
        "nodes": [],
        "open": "{",
        "pos": {
          "depth": 1,
          "end": 8,
          "start": 7,
        },
      },
    ],
    "open": "(",
    "pos": {
      "depth": 0,
      "end": 9,
      "start": 0,
    },
  },
]
`;

exports[`complex: sub empty 1`] = `
[
  {
    "close": ")",
    "content": "()",
    "innerContent": "",
    "nodeType": "bracket",
    "nodes": [],
    "open": "(",
    "pos": {
      "depth": 0,
      "end": 1,
      "start": 0,
    },
  },
]
`;

exports[`complex: sub sub empty 1`] = `
[
  {
    "close": ")",
    "content": "(())",
    "innerContent": "()",
    "nodeType": "bracket",
    "nodes": [
      {
        "close": ")",
        "content": "()",
        "innerContent": "",
        "nodeType": "bracket",
        "nodes": [],
        "open": "(",
        "pos": {
          "depth": 1,
          "end": 2,
          "start": 1,
        },
      },
    ],
    "open": "(",
    "pos": {
      "depth": 0,
      "end": 3,
      "start": 0,
    },
  },
]
`;

exports[`complex: with newline 1`] = `
[
  {
    "content": "hel",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 3,
      "start": 0,
    },
  },
  {
    "close": ")",
    "content": "(lo
go)",
    "innerContent": "lo
go",
    "nodeType": "bracket",
    "nodes": [
      {
        "content": "lo
go",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 9,
          "start": 4,
        },
      },
    ],
    "open": "(",
    "pos": {
      "depth": 0,
      "end": 9,
      "start": 3,
    },
  },
  {
    "content": "od by",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 15,
      "start": 10,
    },
  },
]
`;

exports[`escape works: escape bracket cahr 1`] = `
[
  {
    "close": ")",
    "content": "(\\(OK\\)\\[GOOD\\])",
    "innerContent": "\\(OK\\)\\[GOOD\\]",
    "nodeType": "bracket",
    "nodes": [
      {
        "content": "(OK)[GOOD]",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 15,
          "start": 1,
        },
      },
    ],
    "open": "(",
    "pos": {
      "depth": 0,
      "end": 15,
      "start": 0,
    },
  },
]
`;

exports[`escape works: escape char 1`] = `
[
  {
    "content": "\\",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 1,
      "start": 0,
    },
  },
]
`;

exports[`works: single 1`] = `
[
  {
    "content": "before",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 6,
      "start": 0,
    },
  },
  {
    "close": ")",
    "content": "(hit)",
    "innerContent": "hit",
    "nodeType": "bracket",
    "nodes": [
      {
        "content": "hit",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 10,
          "start": 7,
        },
      },
    ],
    "open": "(",
    "pos": {
      "depth": 0,
      "end": 10,
      "start": 6,
    },
  },
  {
    "content": "after",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 16,
      "start": 11,
    },
  },
]
`;

exports[`works: three nest 1`] = `
[
  {
    "content": "aa",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 2,
      "start": 0,
    },
  },
  {
    "close": ")",
    "content": "(bb(cc(dd)cc)bb)",
    "innerContent": "bb(cc(dd)cc)bb",
    "nodeType": "bracket",
    "nodes": [
      {
        "content": "bb",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 5,
          "start": 3,
        },
      },
      {
        "close": ")",
        "content": "(cc(dd)cc)",
        "innerContent": "cc(dd)cc",
        "nodeType": "bracket",
        "nodes": [
          {
            "content": "cc",
            "nodeType": "text",
            "pos": {
              "depth": 2,
              "end": 8,
              "start": 6,
            },
          },
          {
            "close": ")",
            "content": "(dd)",
            "innerContent": "dd",
            "nodeType": "bracket",
            "nodes": [
              {
                "content": "dd",
                "nodeType": "text",
                "pos": {
                  "depth": 3,
                  "end": 11,
                  "start": 9,
                },
              },
            ],
            "open": "(",
            "pos": {
              "depth": 2,
              "end": 11,
              "start": 8,
            },
          },
          {
            "content": "cc",
            "nodeType": "text",
            "pos": {
              "depth": 2,
              "end": 14,
              "start": 12,
            },
          },
        ],
        "open": "(",
        "pos": {
          "depth": 1,
          "end": 14,
          "start": 5,
        },
      },
      {
        "content": "bb",
        "nodeType": "text",
        "pos": {
          "depth": 1,
          "end": 17,
          "start": 15,
        },
      },
    ],
    "open": "(",
    "pos": {
      "depth": 0,
      "end": 17,
      "start": 2,
    },
  },
  {
    "content": "aa",
    "nodeType": "text",
    "pos": {
      "depth": 0,
      "end": 20,
      "start": 18,
    },
  },
]
`;
